samples/_failures_safe/1761499074_f1e2e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_700a37bb.c: In function ‘main’:
./samples/SAFE/__tmp_700a37bb.c:148:9: error: expected declaration or statement at end of input
  148 |         choice = read_int("Select operation: ", 1, 5);
      |         ^~~~~~
./samples/SAFE/__tmp_700a37bb.c:148:9: error: expected declaration or statement at end of input
